# watch-commander

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
.virtual_documents/docs/notebooks/: mgl_swagger_api.ipynb
db/: scheme.txt  watchCommander.mwb  watchCommander.mwb.bak
docs/: links.txt
docs/notebooks/: c263A_filter.csv  c263_filter.csv  c264_filter.csv  c265_filter.csv  c266_filter.csv  c267A_filter.csv  c267_filter.csv  c268A_filter.csv  c268B_filter.csv  c268_filter.csv  c269_filter.csv  c270_filter.csv  c271A_filter.csv  c271_filter.csv  c272_filter.csv  c273A_filter.csv  c273_filter.csv  c274_filter.csv  c90_filter.csv  mgl_swagger_api.ipynb  pulled_mgl.csv  pulled_mgl.xlsx
flask_app/: __init__.py
flask_app/config/: mysql_conn.py
flask_app/controllers/: template_controller.py  user_controller.py
flask_app/models/: mgl_model.py  user_model.py
flask_app/static/css/: dash_style.css  style.css
flask_app/static/utils/: format_helpers.py
flask_app/templates/: about.html  contact.html  dashboard.html  dashboard_base.html  dept_information.html  domestic_resources.html  faq.html  getting_started.html  legal.html  login.html  login_base.html  manage_account.html  mental_health_reference.html  mgl_chapter.html  mgl_reference.html  mgl_section.html  oui_reference.html  rolecall_notes.html
